# narvis

./: docker-compose.yaml  mkdocs.yml
.github/workflows/: docker-build.yaml
admin/: .env  pyproject.toml
admin/src/admin/: __init__.py
admin/src/bootstrap/: init_app.py  init_rmq.py  init_zbx.py
admin/src/bootstrap/templates/: template_icmp_ping_30s.yaml
admin/src/core/: config.py  security.py
admin/src/libs/rabbitmq/: rmq.py
admin/src/libs/zbx/: __init__.py  client.py  const.py  schemas.py
client/: .env  Dockerfile  docker-compose.override.yaml  docker-compose.yaml  go.mod  go.sum  main.go
client/config/: config.go
client/tasks/: callback.go  dispatch.go  dispatch_test.go  helpers.go  task.go
common/: go.mod
common/constants/: constant.go  enum.go  error.go
common/tools/: file.go
config/alertmanager/: alertmanager-web.yml  alertmanager.yml
docs/: index.md
intend/: go.mod  go.sum
intend/alerts/: alerts.go
intend/cache/: mem_cache.go
intend/circuittype/: circuit_type.go
intend/common/: schemas.go
intend/devicerole/: device_role.go  device_role_test.go
intend/intendtask/: task.go
intend/logger/: logger.go
intend/manufacturer/: manufacturer.go
intend/metrics/: metrics.go
intend/netdisco/: dispatcher.go  driver_interace.go  enrich_device.go  netdisco.go  netdisco_test.go  scan_ap.go  scan_device.go
intend/platform/: platform.go
intend/utils/: helpers.go
server/: .golangci.yaml  Dockerfile  README.md  config.yaml  go.mod  go.sum  main.go
server/config/: config.go
server/core/: logger.go  settings.go
(+525 files in other folders)
