[project]
name = "narvis-admin"
version = "0.1.0"
description = "navis admin server"
authors = [
    { name = "jeffry", email = "182467653@qq.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
