[project]
name = "narvis-admin"
version = "0.1.0"
description = "navis admin server"
authors = [
    { name = "jeffry", email = "182467653@qq.com" }
]
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.2",
    "cryptocode>=0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
